[package]
authors = ["Kanishkar J <kanishkarj@hotmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32f407vet6-rust-examples"
version = "0.1.0"

[dependencies]
cortex-m = {version="0.6.1", features=["inline-asm"]}
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
cortex-m-semihosting = "0.3.5"

[dependencies.stm32f4]
version = "0.8.0"
features = ["stm32f407", "rt"]

[[bin]]
name = "stm32f407vet6-rust-examples"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations